code quality workflow setup